alignment fixed login/register form

--- a/public/style.css
+++ b/public/style.css
@@ -21,6 +21,10 @@
   padding: 1rem;
 }
 
+/* #catchThought {
+  max-width: 100%;
+  height: auto;
+} */
 .info-box {
   margin-top: 40px;
   padding: 30px;
